Fix shadows for both single shapes and shape group

it also fixes if a shape is child of another shapecontainer

There is some lingering bug with the default tool not using the bounding box
correctly (which can be seen by rotating a shape group)

Shadows for shape groups also don't work correctly through load/save/edit
cycles, but that is not really related to this.

BUG: 273500